fix(Footer): update font size for h2 elements for improved readability

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -33,7 +33,7 @@
 
 .footer-column h2 {
     margin-block: 0;
-    font-size: 0.9rem;
+    font-size: 1rem;
     text-transform: uppercase;
 }
 
